chore: KEYSTORE_PROPERTIES 환경변수 값으로 변경

--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -69,7 +69,7 @@ jobs:
         env:
           KEYSTORE_PROPERTIES: ${{ secrets.KEYSTORE_PROPERTIES }}
         run: |
-          echo "KEYSTORE_PROPERTIES" > keystore.properties
+          echo "$KEYSTORE_PROPERTIES" > keystore.properties
 
       - name: Create keystore directory
         run: mkdir -p /home/runner/work/2024-friendogly/2024-friendogly/android/app/keystore
