--- a/.github/workflows/android-cd.yml
+++ b/.github/workflows/android-cd.yml
@@ -84,3 +84,20 @@ jobs:
           generate_release_notes: true
           files: |
             android/app/build/outputs/apk/release/app-release.apk
+
+      - name: Build release Bundle
+        run: ./gradlew bundleRelease
+
+      - name: Upload a Build AAB Artifact
+        uses: actions/upload-artifact@v3.0.0
+        with:
+          name: app-release.aab
+          path: android/app/build/outputs/bundle/release/app-release.aab
+          if-no-files-found: error
+
+      - name: Upload artifact to Google Play
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceCredentialsFileContent: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+          packageName: com.happy.friendogly
+          releaseFiles: android/app/build/outputs/apk/release/app-release.aab
