--- a/.github/workflows/android-cd.yml
+++ b/.github/workflows/android-cd.yml
@@ -95,9 +95,9 @@ jobs:
           path: android/app/build/outputs/bundle/release/app-release.aab
           if-no-files-found: error
 
-      - name: Upload artifact to Google Play
+      - name: Upload artifact to Google Play Store
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.happy.friendogly
-          releaseFiles: android/app/build/outputs/apk/release/app-release.aab
+          releaseFiles: android/app/build/outputs/bundle/release/app-release.aab
