chore: create-drop 옵션을 dev, local에만 적용

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -41,3 +41,6 @@ spring:
     console:
       enabled: true
       path: ${H2_CONSOLE_ENDPOINT}
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
