chore: prod 환경에서 data.sql 미사용

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -32,6 +32,9 @@ file:
     path: firebase-friendogly-private-key.json
 
 spring:
+  sql:
+    init:
+      data-locations:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${MYSQL_URL}
