--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -32,15 +32,14 @@ file:
     path: firebase-friendogly-private-key.json
 
 spring:
+  sql:
+    init:
+      data-locations:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:database
-    username: ${H2_CONSOLE_USERNAME}
-    password: ${H2_CONSOLE_PASSWORD}
-  h2:
-    console:
-      enabled: true
-      path: ${H2_CONSOLE_ENDPOINT}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${MYSQL_URL}
+    username: ${MYSQL_USERNAME}
+    password: ${MYSQL_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
