--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ constraintlayout = "2.1.4"
 junit-jupiter = "5.10.2"
 assertj-core = "3.25.3"
 kotest-runner-junit5 = "5.8.0"
+android-junit5 = "1.10.0.0"
 mockk = "1.13.10"
 ktlint = "12.1.0"
 ballon = "1.6.6"
@@ -174,3 +175,4 @@ kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
+android-junit5 = { id = "de.mannodermaus.android-junit5", version.ref = "android-junit5" }
