chore: 환경변수 설정 수정

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -39,15 +39,15 @@ spring:
     writer:
       hikari:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbc-url: ${MYSQL_URL}
+        jdbc-url: ${WRITER_MYSQL_URL}
         read-only: false
         username: ${MYSQL_USERNAME}
         password: ${MYSQL_PASSWORD}
     reader:
       hikari:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbc-url: ${MYSQL_URL}
-        read-only: false
+        jdbc-url: ${READER_MYSQL_URL}
+        read-only: true
         username: ${MYSQL_USERNAME}
         password: ${MYSQL_PASSWORD}
 
