--- a/.github/workflows/backend-cd-workflow-dev.yml
+++ b/.github/workflows/backend-cd-workflow-dev.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: self-hosted-dev
 
     steps:
       - name: Checkout Repository
@@ -29,9 +29,9 @@ jobs:
       - name: create-json
         uses: jsdaniell/create-json@1.1.2
         with:
-            name: "firebase-friendogly-private-key.json"
-            json: ${{ secrets.FIREBASE_FRIENDOGLY_PRIVATE_KEY }}
-            dir: './backend/src/main/resources/'
+          name: "firebase-friendogly-private-key.json"
+          json: ${{ secrets.FIREBASE_FRIENDOGLY_PRIVATE_KEY }}
+          dir: './backend/src/main/resources/'
 
       - name: Grant execute permission for gradlew
         working-directory: ./backend
@@ -41,25 +41,25 @@ jobs:
         working-directory: ./backend
         run: ./gradlew build
 
-#      - name: Upload build artifact
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: friendogly-be-develop-jar
-#          path: ./backend/build/libs/friendogly-0.0.1-SNAPSHOT.jar
+  #      - name: Upload build artifact
+  #        uses: actions/upload-artifact@v3
+  #        with:
+  #          name: friendogly-be-develop-jar
+  #          path: ./backend/build/libs/friendogly-0.0.1-SNAPSHOT.jar
 
   deploy:
     needs: build
-    runs-on: self-hosted
+    runs-on: self-hosted-dev
     steps:
       - name: Change permission
         run: |
           sudo chown -R ubuntu:ubuntu /home/ubuntu/actions-runner/_work/2024-friendogly
 
-#      - name: Download build artifact
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: friendogly-be-develop-jar
-#          path: ./backend/build/libs
+      #      - name: Download build artifact
+      #        uses: actions/download-artifact@v3
+      #        with:
+      #          name: friendogly-be-develop-jar
+      #          path: ./backend/build/libs
 
       - name: Find Java Application PID And Kill PID
         id: find_pid
@@ -81,5 +81,5 @@ jobs:
           cd backend/build/libs
           echo "File creation time(KR-09:00):"
           ls -l --time=ctime friendogly-0.0.1-SNAPSHOT.jar
-          sudo nohup java -jar friendogly-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod --jwt.secret-key=${{ secrets.JWT_SECRET_KEY }} --jwt.access-expiration-time=${{ secrets.JWT_ACCESS_EXPIRATION_TIME }} --jwt.refresh-expiration-time=${{ secrets.JWT_REFRESH_EXPIRATION_TIME }} --kakao.admin-key=${{ secrets.KAKAO_ADMIN_KEY }} --spring.datasource.url=${{ secrets.MYSQL_URL }} --spring.datasource.username=${{ secrets.MYSQL_USERNAME }} --spring.datasource.password=${{ secrets.MYSQL_PASSWORD }} &
+          sudo nohup java -jar friendogly-0.0.1-SNAPSHOT.jar --spring.profiles.active=dev --jwt.secret-key=${{ secrets.JWT_SECRET_KEY }} --jwt.access-expiration-time=${{ secrets.JWT_ACCESS_EXPIRATION_TIME }} --jwt.refresh-expiration-time=${{ secrets.JWT_REFRESH_EXPIRATION_TIME }} --kakao.admin-key=${{ secrets.KAKAO_ADMIN_KEY }} --spring.datasource.username=${{ secrets.H2_CONSOLE_USERNAME }} --spring.datasource.password=${{ secrets.H2_CONSOLE_PASSWORD }} --spring.h2.console.path=${{ secrets.H2_CONSOLE_ENDPOINT }} &
           echo "start backend server"
