chore: 테스트에서 시간대 때문에 테스트 실패하던 버그 수정

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -91,12 +91,12 @@ tasks.withType(GenerateSwaggerUI) {
     doFirst {
         def swaggerUIFile = file("${openapi3.outputDirectory}/openapi3.yaml")
 
-        def securitySchemesContent = "  securitySchemes:\n" +    \
-                                        "    APIKey:\n" +    \
-                                        "      type: apiKey\n" +    \
-                                        "      name: Authorization\n" +    \
-                                        "      in: header\n" +   \
-                                        "security:\n" +
+        def securitySchemesContent = "  securitySchemes:\n" +     \
+                                         "    APIKey:\n" +     \
+                                         "      type: apiKey\n" +     \
+                                         "      name: Authorization\n" +     \
+                                         "      in: header\n" +    \
+                                         "security:\n" +
                 "  - APIKey: []  # Apply the security scheme here"
 
         swaggerUIFile.append securitySchemesContent
@@ -126,4 +126,8 @@ jar {
 
 resolveMainClassName {
     dependsOn 'copySwaggerUI'
+}
+
+test {
+    systemProperty 'user.timezone', 'Asia/Seoul'
 }
