--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ versionCode = "13"
 versionName = "0.4.1"
 
 agp = "8.3.0"
-kotlin = "1.9.24"
+kotlin = "1.9.0"
 coreKtx = "1.13.1"
 lifecycle-runtime-ktx = "2.8.3"
 lifecycle-extensions = "2.2.0"
@@ -48,13 +48,14 @@ naver-maps = "3.18.0"
 # location
 location = "21.0.1"
 
-## google + firebase
+## google + firebase+ hilt
 google-services = "4.4.2"
 firebase-auth = "23.0.0"
 firebase-messaging = "24.0.0"
 firebase-bom = "33.1.2"
 google-play-services-auth = "21.2.0"
 firebase-crashlytics-plugin = "3.0.2"
+hilt = "2.51.1"
 
 # network
 okhttp = "4.12.0"
@@ -131,6 +132,8 @@ firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.r
 google-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "google-play-services-auth" }
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics" }
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics" }
+hilt-core = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 
 # network
 retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
@@ -153,7 +156,7 @@ ballon = { group = "com.github.skydoves", name = "balloon", version.ref = "ballo
 [bundles]
 android = ["androidx-constraintlayout", "androidx-activity", "androidx-lifecycle", "androidx-activity-ktx", "androidx-fragment-ktx", "androidx-appcompat", "androidx-core-ktx", "material", "image-cropper", "glide", "flextbox", "paging-runtime-ktx", "splashscreen"]
 kotlin = ["lifecycle-runtime-ktx", "lifecycle-extensions", "coroutines-core", "kotlinx-serialization", "kotlinx-datetime"]
-google = ["google-services", "firebase-auth", "firebase-messaging", "google-auth", "firebase-crashlytics", "firebase-analytics"]
+google = ["google-services", "firebase-auth", "firebase-messaging", "google-auth", "firebase-crashlytics", "firebase-analytics", "hilt-core"]
 network = ["retrofit-core", "okhttp-core", "okhttp-logging-interceptor", "retrofit2-kotlinx-serialization-converter"]
 kakao = ["kakao-user"]
 naver = ["naver-maps"]
@@ -176,3 +179,4 @@ kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", vers
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
 android-junit5 = { id = "de.mannodermaus.android-junit5", version.ref = "android-junit5" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
