chore: local 환경 batch_fetch_size 설정 추가
Co-authored-by: jimi567 <repday0609@gmail.com>

--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -19,6 +19,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        default_batch_fetch_size: 100
   sql.init.mode: always
 
 logging.level.org:
