chore: dev 및 prod 환경 batch size 옵션 추가
Co-authored-by: jimi567 <repday0609@gmail.com>

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -44,6 +44,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        default_batch_fetch_size: 100
   sql:
     init:
       data-locations:
