fix: conflict 해결

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'io.jsonwebtoken:jjwt:0.12.6'
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation "org.springframework.boot:spring-boot-starter-actuator"
@@ -91,12 +92,12 @@ tasks.withType(GenerateSwaggerUI) {
     doFirst {
         def swaggerUIFile = file("${openapi3.outputDirectory}/openapi3.yaml")
 
-        def securitySchemesContent = "  securitySchemes:\n" +     \
-                                         "    APIKey:\n" +     \
-                                         "      type: apiKey\n" +     \
-                                         "      name: Authorization\n" +     \
-                                         "      in: header\n" +    \
-                                         "security:\n" +
+        def securitySchemesContent = "  securitySchemes:\n" +      \
+                                          "    APIKey:\n" +      \
+                                          "      type: apiKey\n" +      \
+                                          "      name: Authorization\n" +      \
+                                          "      in: header\n" +     \
+                                          "security:\n" +
                 "  - APIKey: []  # Apply the security scheme here"
 
         swaggerUIFile.append securitySchemesContent
@@ -130,5 +131,5 @@ resolveMainClassName {
 
 test {
     systemProperty 'user.timezone', 'Asia/Seoul'
-    
+
 }
