fix: RabbitMQ 도입 -> 분산 환경에서 채팅 가능하도록 구현

--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -26,7 +26,10 @@ logging.level.org:
     SQL: debug
     orm.jdbc.bind: trace
 
-
 file:
   firebase:
     path: firebase-friendogly-private-key.json
+management:
+  health:
+    rabbit:
+      enabled: false
