--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp' // rabbitmq
+    implementation 'org.springframework.boot:spring-boot-starter-reactor-netty' // rabbitmq
     implementation 'io.jsonwebtoken:jjwt:0.12.6'
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation "org.springframework.boot:spring-boot-starter-actuator"
