feat: 상태메시지 기능 구현

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -118,6 +118,12 @@
                     android:scheme="@string/KAKAO_OAUTH_HOST" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.ui.message.MessageActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/TransparentActivityTheme"
+            android:windowSoftInputMode="stateVisible" />
 
         <service
             android:name=".presentation.alarm.AlarmReceiver"
