[BE] fix: 이미지 용량 제한을 5MB로 설정 (#643)

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
   jpa:
     defer-datasource-initialization: true
   application:
