refactor: Message -> StateMessage로 클래스명 변경

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -119,7 +119,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.ui.message.MessageActivity"
+            android:name=".presentation.ui.statemessage.StateMessageActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/TransparentActivityTheme"
