--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -2,9 +2,6 @@ name: backend-ci
 
 on:
   pull_request:
-    branches: [ "develop" ]
-    paths:
-      - 'backend/**'
 
 defaults:
   run:
@@ -12,61 +9,28 @@ defaults:
 
 jobs:
   build:
-
     runs-on: self-hosted-dev
     permissions:
       checks: write
-
-      # needed unless run with comment_mode: off
       pull-requests: write
-
-      # only needed for private repository
       contents: read
-
-      # only needed for private repository
       issues: read
-
-      # required by download step to access artifacts API
       actions: read
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'corretto'
+      - name: 테스트 키가 쉘스크립트에서 잘 사용되는가?
+        run: |
+          # 쉘 스크립트 생성
+          echo '#!/bin/bash' > my_script.sh
+          echo 'echo "The secret is: $TEST_KEY"' >> my_script.sh
+          echo 'echo "$TEST_KEY" > secret_output.txt' >> my_script.sh  # TEST_KEY를 출력한 파일 생성
+          chmod +x my_script.sh  # 스크립트에 실행 권한 부여
 
-      # - name: Setup Gradle
-      #   uses: gradle/actions/setup-gradle@v3
-      #   with:
-      #     gradle-version: 8.1.1
+        env:
+          TEST_KEY: ${{ secrets.TEST_KEY }}
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: create-json
-        uses: jsdaniell/create-json@1.1.2
-        with:
-          name: "firebase-friendogly-private-key.json"
-          json: ${{ secrets.FIREBASE_FRIENDOGLY_PRIVATE_KEY }}
-          dir: './backend/src/main/resources/'
-
-      - name: Build with Gradle Wrapper
-        run: ./gradlew build
-
-      - name: 테스트 결과를 PR에 코멘트로 등록합니다
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always()
-        with:
-          files: |
-            ./backend/build/test-results/**/*.xml
-            ./backend/build/test-results/**/*.trx
-            ./backend/build/test-results/**/*.json
-
-      - name: 실패 테스트결과의 원인을 Report 합니다
-        uses: mikepenz/action-junit-report@v3
-        if: always()
-        with:
-          report_paths: './backend/build/test-results/test/TEST-*.xml'
-          token: ${{ github.token }}
+      - name: Execute the script
+        run: |
+          ./my_script.sh
+        env:
+          TEST_KEY: ${{ secrets.TEST_KEY }}
