chore: test 브랜치 모든 push 러너가 잡도록 수정

--- a/.github/workflows/backend-cd-workflow-dev.yml
+++ b/.github/workflows/backend-cd-workflow-dev.yml
@@ -3,8 +3,8 @@ name: deploy
 on:
   push:
     branches: ["test/dev-cd"]
-    paths:
-      - "backend/**"
+    # paths:
+      # - "backend/**"
 
 jobs:
   build:
