--- a/.github/workflows/backend-cd-workflow-dev.yml
+++ b/.github/workflows/backend-cd-workflow-dev.yml
@@ -2,7 +2,7 @@ name: deploy
 
 on:
   push:
-    branches: ["test/dev-cd"]
+    branches: [ "develop" ]
     paths:
       - "backend/**"
 
@@ -55,8 +55,8 @@ jobs:
         run: |
           sudo chmod +x /home/ubuntu/deploy/deploy.sh
           sudo /home/ubuntu/deploy/deploy.sh
+      
 
-        
       # - name: Find Java Application PID And Kill PID
       #   id: find_pid
       #   run: |
