--- a/.github/workflows/backend-cd-workflow-dev.yml
+++ b/.github/workflows/backend-cd-workflow-dev.yml
@@ -2,7 +2,7 @@ name: deploy
 
 on:
   push:
-    branches: ["develop"]
+    branches: [ "develop" ]
     paths:
       - "backend/**"
 
@@ -20,12 +20,6 @@ jobs:
           java-version: "17"
           distribution: "corretto"
 
-      # - name: Setup Gradle
-      #   uses: gradle/actions/setup-gradle@v3
-      #   with:
-      #     gradle-version: 8.1.1
-
-
       - name: create-json
         uses: jsdaniell/create-json@1.1.2
         with:
@@ -41,12 +35,6 @@ jobs:
         working-directory: ./backend
         run: ./gradlew build
 
-  #      - name: Upload build artifact
-  #        uses: actions/upload-artifact@v3
-  #        with:
-  #          name: friendogly-be-develop-jar
-  #          path: ./backend/build/libs/friendogly-0.0.1-SNAPSHOT.jar
-
   deploy:
     needs: build
     runs-on: self-hosted-dev
@@ -55,31 +43,7 @@ jobs:
         run: |
           sudo chown -R ubuntu:ubuntu /home/ubuntu/actions-runner/_work/2024-friendogly
 
-      #      - name: Download build artifact
-      #        uses: actions/download-artifact@v3
-      #        with:
-      #          name: friendogly-be-develop-jar
-      #          path: ./backend/build/libs
-
-      - name: Find Java Application PID And Kill PID
-        id: find_pid
+      - name: Deploy
         run: |
-          sudo pgrep -f friendogly-0.0.1-SNAPSHOT.jar | xargs sudo kill -9 | true
-
-      - name: Check if room-esc server is running on port 8080 after stop
-        run: |
-          PID=$(lsof -t -i:8080 || true)
-          if [ -n "$PID" ]; then
-            echo "Server is still running with PID: $PID"
-            exit 1
-          else
-            echo "Server successfully stopped."
-          fi
-
-      - name: Start server
-        run: |
-          cd backend/build/libs
-          echo "File creation time(KR-09:00):"
-          ls -l --time=ctime friendogly-0.0.1-SNAPSHOT.jar
-          sudo nohup java -jar friendogly-0.0.1-SNAPSHOT.jar --spring.profiles.active=dev --jwt.secret-key=${{ secrets.JWT_SECRET_KEY }} --jwt.access-expiration-time=${{ secrets.JWT_ACCESS_EXPIRATION_TIME }} --jwt.refresh-expiration-time=${{ secrets.JWT_REFRESH_EXPIRATION_TIME }} --kakao.admin-key=${{ secrets.KAKAO_ADMIN_KEY }} --spring.datasource.username=${{ secrets.H2_CONSOLE_USERNAME }} --spring.datasource.password=${{ secrets.H2_CONSOLE_PASSWORD }} --spring.h2.console.path=${{ secrets.H2_CONSOLE_ENDPOINT }} &
-          echo "start backend server"
+          sudo chmod +x /home/ubuntu/deploy/deploy.sh
+          sudo /home/ubuntu/deploy/deploy.sh
