test: 누락된 배치 사이즈 설정 추가

--- a/backend/src/test/resources/application-local.yml
+++ b/backend/src/test/resources/application-local.yml
@@ -9,4 +9,8 @@ jwt:
 kakao:
   admin-key: sdfsdfsdfdsfsdfsdf
 
-
+spring:
+    jpa:
+      properties:
+        hibernate:
+          default_batch_fetch_size: 100
