--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -32,6 +32,12 @@ file:
     path: firebase-friendogly-private-key.json
 
 spring:
+  rabbitmq:
+    host: ${RABBITMQ_PROD_HOST}
+    username: ${RABBITMQ_PROD_USERNAME}
+    password: ${RABBITMQ_PROD_PASSWORD}
+    port: 3100 # initial connection port: use 3100 instead of 5672
+    stomp-port: 9100 # STOMP port: use 9100 instead of 61613
   sql:
     init:
       data-locations:
