--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -18,14 +18,10 @@ file:
 
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:/home/ubuntu/h2_test_data;AUTO_SERVER=true
-    username: ${H2_CONSOLE_USERNAME}
-    password: ${H2_CONSOLE_PASSWORD}
-  h2:
-    console:
-      enabled: true
-      path: ${H2_CONSOLE_ENDPOINT}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/friendogly?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: ${MYSQL_USER_NAME}
+    password: ${MYSQL_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
