chore: upload google play track 프로덕션으로 변경

--- a/.github/workflows/android-cd.yml
+++ b/.github/workflows/android-cd.yml
@@ -94,4 +94,4 @@ jobs:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.happy.friendogly
           releaseFiles: android/app/build/outputs/bundle/release/app-release.aab
-          track: "Beta-version"
+          track: "production"
