chore: ci테스트 완료로 인한 주석 삭제

--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -2,9 +2,9 @@ name: backend-ci
 
 on:
   pull_request:
-    # branches: [ "develop" ]
-    # paths:
-    #   - 'backend/**'
+    branches: [ "develop" ]
+    paths:
+      - 'backend/**'
 
 defaults:
   run:
