--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -27,17 +27,15 @@ management:
   server:
     port: 8081
 
+  health:
+    rabbit:
+      enabled: false
+
 file:
   firebase:
     path: firebase-friendogly-private-key.json
 
 spring:
-  rabbitmq:
-    host: ${RABBITMQ_PROD_HOST}
-    username: ${RABBITMQ_PROD_USERNAME}
-    password: ${RABBITMQ_PROD_PASSWORD}
-    port: 3100 # initial connection port: use 3100 instead of 5672
-    stomp-port: 9100 # STOMP port: use 9100 instead of 61613
   sql:
     init:
       data-locations:
