--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -42,20 +42,10 @@ spring:
     init:
       data-locations:
   datasource:
-    writer:
-      hikari:
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbc-url: ${WRITER_MYSQL_URL}
-        read-only: false
-        username: ${MYSQL_USERNAME}
-        password: ${MYSQL_PASSWORD}
-    reader:
-      hikari:
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbc-url: ${READER_MYSQL_URL}
-        read-only: true
-        username: ${MYSQL_USERNAME}
-        password: ${MYSQL_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${MYSQL_PROD_RDS_URL}
+    username: ${MYSQL_PROD_RDS_USERNAME}
+    password: ${MYSQL_PROD_RDS_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: validate
